Setup SwiftGen for strings and colors.

--- a/swiftgen.yml
+++ b/swiftgen.yml
@@ -1,6 +1,12 @@
 output_dir: gdgminsk/Resources/Generated
+strings:
+  inputs: 'gdgminsk/Resources/Localization/en.lproj'
+  outputs:
+    templateName: structured-swift4
+    output: strings.swift
 xcassets:
-  inputs: ['gdgminsk/Resources/Images/Images.xcassets']
+  inputs: ['gdgminsk/Resources/Images/Images.xcassets',
+           'gdgminsk/Resources/Colors/Colors.xcassets']
   outputs:
     templateName: swift4
     output: assets-images.swift
